--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
     "lottie-react": "^2.4.0",
+    "mdb-react-ui-kit": "^7.1.0",
     "natural": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
     "react-toastify": "^10.0.3",
+    "scrollreveal": "^4.0.9",
     "speak-tts": "^2.0.8",
     "styled-components": "^5.3.9",
     "theme-change": "^2.5.0",
